--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ozguruysal/spectre",
-  "version": "0.1.0-alpha.4",
+  "version": "0.0.0",
   "description": "Spectre Design System",
   "private": false,
   "type": "module",
