--- a/packages/tailwind-preset/package.json
+++ b/packages/tailwind-preset/package.json
@@ -30,5 +30,6 @@
   "peerDependencies": {
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1"
-  }
+  },
+  "repository": "https://github.com/ozguruysal/changesets-gpr-test"
 }
