--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -61,5 +61,6 @@
   "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
-  }
+  },
+  "repository": "https://github.com/ozguruysal/changesets-gpr-test"
 }
