--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -54,3 +54,4 @@ jobs:
           createGithubReleases: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
