Remove turbo cache step

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,14 +17,6 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Cache turbo build setup
-        uses: actions/cache@v4
-        with:
-          path: .turbo
-          key: ${{ runner.os }}-turbo-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-turbo-
-
       - name: Setup Node.js environment
         uses: actions/setup-node@v4
         with:
@@ -44,7 +36,7 @@ jobs:
           //npm.pkg.github.com/:_authToken=$GITHUB_TOKEN
           EOF
 
-      - name: Create release pull request
+      - name: Create release pull request or publish
         id: changesets
         uses: changesets/action@v1
         with:
