Add default working directory

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,8 +7,13 @@ on:
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
+defaults:
+  run:
+    shell: bash
+    working-directory: services/spectre
+
 env:
-  WORKING_DIRECTORY: services/baukasten
+  WORKING_DIRECTORY: services/spectre
 
 jobs:
   release:
