--- a/services/spectre/packages/tailwind-preset/package.json
+++ b/services/spectre/packages/tailwind-preset/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ozguruysal/spectre-tailwind-preset",
-  "version": "0.0.1-alpha.1",
+  "version": "0.0.0",
   "description": "Tailwind preset for Spectre Design System",
   "private": false,
   "author": "Özgür Uysal",
